--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@layer components {
+    .text-scroll {
+     overflow-y: auto;
+    }
+
+    .text-scroll::-webkit-scrollbar {
+      display: none;
+    }
+
+    .text-scroll {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+    }
+
+    .back-ground {
+      background-image: url('http://localhost:5000/uploads//2022-05-30T10-09-36.995Z-Screenshot%20(5).png')
+    }
+
+    .shape-1{
+      margin-left: 0px;
+      width: 0px;
+      height: 30px;
+      border-top: 0px solid transparent;
+      border-left: 30px solid rgb(240, 170, 71);
+      border-bottom:25px solid transparent;
+      
+    }
+
+    .menu-animate {
+      
+      animation-name: drop-down;
+      animation-duration: 0.7s;
+      animation-direction: reverse;
+    }
+
+    @keyframes drop-down{
+      0% {transform: scale(1); top:70px; right: 140px;  }
+      /* 10% {transform: scale(1); top:70px; right: 140px;  }
+      20% {transform: scale(0.9); top:70px; right: 140px;  }
+      30% {transform: scale(0.8); top:70px; right: 140px;  }
+      40% {transform: scale(0.7); top:70px; right: 140px;  }
+      50% {transform: scale(0.6); top:70px; right: 140px;  }
+      60% {transform: scale(0.5); top:70px; right: 140px;  }
+      70% {transform: scale(0.4); top:70px; right: 140px;  }
+      80% {transform: scale(0.3); top:70px; right: 140px;  }
+      90% {transform: scale(0.2); top:70px; right: 140px;  } */
+      100% {transform: scale(0.1); top: 0px; right: 0px;  }
+    }
+   
+  }
